Fix: Layout issue with most views (grid->flex)

--- a/style/global.css
+++ b/style/global.css
@@ -15,8 +15,7 @@ html, body {
 }
 
 body {
-    display: grid;
-    grid-template-rows: auto 1fr auto;
+    display: flex;
 }
 
 /* https://www.a11yproject.com/posts/how-to-hide-content/ */
@@ -62,4 +61,5 @@ a:hover, a:active {
 
 main {
     padding: 0 2em;
+    flex-grow: 1;
 }
